--- a/_posts/2020-10-25- Article 2 Ships Hitting Animals/Article 2 Ships Hitting Animals.Rmd
+++ b/_posts/2020-10-25- Article 2 Ships Hitting Animals/Article 2 Ships Hitting Animals.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Article 2: Ships Hitting Animals  "
 description: |
- "Small animals hit by boats are more numerous than we think and this creates big troubles."
+ Small animals hit by boats are more numerous than we think and this creates big troubles.
   
 author:
   - name: Cyril Dupuis
@@ -26,7 +26,7 @@ Words : 885
 
 ## II - Vocabulary:
 
-| Word from the text    	| synonym/definition in english                                                                                            	| French translation                        	|
+| Word from the text    	| Synonym/definition in English                                                                                            	| French Translation                        	|
 |-----------------------	|--------------------------------------------------------------------------------------------------------------------------	|-------------------------------------------	|
 | mammals               	|                                                                                                                          	| mammifères                                	|
 | oceangoing            	| designed and equipped to travel on the open sea                                                                          	| de haute-mer                              	|
@@ -72,13 +72,13 @@ Words : 885
 
 ## III - Analysis table about the study:
 
-| Researchers ?                        	| - Stephanie Plön (Cetacean biologist at the Bayworld Center for Research and Education)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             	|
+| Researchers                         	| - Stephanie Plön (Cetacean biologist at the Bayworld Center for Research and Education)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             	|
 |--------------------------------------	|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------	|
 | Published in ? When ? (If mentioned) 	| - Published in the "Frontiers in Marine Science"                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    	|
 | General Topic                        	| - What are the causes of boat collisions with small marine mammals and what impacts do they cause?                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  	|
-| Procedure/What was exmaminated ?     	| - We know that boat propellers and bows are a danger to large marine mammals + Thanks to eyewitness accounts and autopsy results, It has been found that boats hit about 75 species of small marine animals as well as vulnerable or critically endangered species + Collisions with small animals go unnoticed because the impacts are not noticeable + Their bodies disappear faster than those of large animals and are therefore harder to notice + Species that sleep on the surface are more threatened because they are directly exposed + Young animals are more vulnerable because they are less experienced + In 30 years in Florida, the more boats there are, the less turtles there are, and in the Arctic, seal breeding grounds are destroyed by boats and their bright lights dazzle and stun the seals who can no longer dodge the 	|
-| Conclusions/Discovery ?              	| - Efforts to monitor and limit collisions with ships are underway + Injuries have negative effects on the competitiveness and survival of individuals and they also have to expend energy to heal themselves initially planned for something else which impacts on the survivability of the species + Skate sightings manta in Western Australian waters have decreased, mainly due to collisions + Database results are skewed and the number of collisions and injured animals per ship is much higher than expected + By slowing ship speeds and using whale detection sensors, the collision rate in New Zealand has become almost zero                                                                                                                                                                                                         	|
-| Remaining questions ?                	| - Is it possible to change the trajectories of vessels to avoid risk areas ? - How distorted are the results ? - Can these collisions be the main cause of the extinction of a species?                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             	||
+| Procedure/What was exmaminated      	| - We know that boat propellers and bows are a danger to large marine mammals + Thanks to eyewitness accounts and autopsy results, It has been found that boats hit about 75 species of small marine animals as well as vulnerable or critically endangered species + Collisions with small animals go unnoticed because the impacts are not noticeable + Their bodies disappear faster than those of large animals and are therefore harder to notice + Species that sleep on the surface are more threatened because they are directly exposed + Young animals are more vulnerable because they are less experienced + In 30 years in Florida, the more boats there are, the less turtles there are, and in the Arctic, seal breeding grounds are destroyed by boats and their bright lights dazzle and stun the seals who can no longer dodge the 	|
+| Conclusions/Discovery               	| - Efforts to monitor and limit collisions with ships are underway + Injuries have negative effects on the competitiveness and survival of individuals and they also have to expend energy to heal themselves initially planned for something else which impacts on the survivability of the species + Skate sightings manta in Western Australian waters have decreased, mainly due to collisions + Database results are skewed and the number of collisions and injured animals per ship is much higher than expected + By slowing ship speeds and using whale detection sensors, the collision rate in New Zealand has become almost zero                                                                                                                                                                                                         	|
+| Remaining questions                 	| - Is it possible to change the trajectories of vessels to avoid risk areas ? - How distorted are the results ? - Can these collisions be the main cause of the extinction of a species ?                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             	||
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
