--- a/_posts/2020-12-11- Article 3 Smooth Handfish Extinction/Article 3 The Smooth Handfish Extinction.Rmd
+++ b/_posts/2020-12-11- Article 3 Smooth Handfish Extinction/Article 3 The Smooth Handfish Extinction.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Article 3: The Smooth Handfish extinction"
 description: |
-  "The smooth-handed fish is the first fish of modern times to be officially extinct and other species may follow."
+  The smooth-handed fish is the first fish of modern times to be officially extinct and other species may follow.
 author: 
   - name: Cyril Dupuis
     url: {}
@@ -55,13 +55,13 @@ Words :447
 
 ## III - Analysis table about the study:
 
-| Researchers ?                         	| Graham Edgar (marine ecologist at the University of Tasmania)                                                                                                                                                                                                                                                                                                                                                                  	|
+| Researchers                          	| Graham Edgar (marine ecologist at the University of Tasmania)                                                                                                                                                                                                                                                                                                                                                                  	|
 |---------------------------------------	|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------	|
 | Published in ? When ? (If mentionned) 	| - Published as “Out of Hand” in Scientific American on the fourtennth of July 2020                                                                                                                                                                                                                                                                                                                                               	|
-| Genreal Topic ?                       	| - Human impact on the extinction of SmoothHandfish and endangered species in Australian waters.                                                                                                                                                                                                                                                                                                                                  	|
-| Procedure/What was examinated ?       	| - Human activities are destroying marine habitats, polluting the water, acidifying the waters + Overexploitation is disrupting food chains and pushing some species into danger of extinction or even total extinction + Smooth hand fish have no larval stage and are unable to move to new locations making them very vulnerable to environmental changes + Frequent scientific sampling in their known range without success. 	|
-| Conclusions/Discovery ?               	| - Humans have a severe impact on biodiversity + The smooth hand fish (Sympterichthys unipennis) is the first fish of modern times to have been placed in the category of extinct species and several other fish species are now endangered or critically endangered.                                                                                                                                                             	|
-| Remaining questions ?                 	| - Is the smooth-handfish the only fish extinct to date? - How could we let this species disappear without noticing? - Are conservation plans being put in place?                                                                                                                                                                                                                                                            	|
+| Genreal Topic                        	| - Human impact on the extinction of SmoothHandfish and endangered species in Australian waters.                                                                                                                                                                                                                                                                                                                                  	|
+| Procedure/What was examinated        	| - Human activities are destroying marine habitats, polluting the water, acidifying the waters + Overexploitation is disrupting food chains and pushing some species into danger of extinction or even total extinction + Smooth hand fish have no larval stage and are unable to move to new locations making them very vulnerable to environmental changes + Frequent scientific sampling in their known range without success. 	|
+| Conclusions/Discovery                	| - Humans have a severe impact on biodiversity + The smooth hand fish (Sympterichthys unipennis) is the first fish of modern times to have been placed in the category of extinct species and several other fish species are now endangered or critically endangered.                                                                                                                                                             	|
+| Remaining questions                  	| - Is the smooth-handfish the only fish extinct to date ? - How could we let this species disappear without noticing ? - Are conservation plans being put in place ?                                                                                                                                                                                                                                                            	|
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
