--- a/_posts/2021-03-10- Article 5 Online Reptile Trade Problems/mon-article-5.Rmd
+++ b/_posts/2021-03-10- Article 5 Online Reptile Trade Problems/mon-article-5.Rmd
@@ -11,7 +11,7 @@ output:
     self_contained: false
 ---
 
-# Article 5: Reptile Trade Is Under-Regulated
+# Article 5: Reptile Trade is Under-Regulated
 
 <img src = https://upload.wikimedia.org/wikipedia/commons/thumb/a/ad/Goniurosaurus_yamashinae_femelle.jpg/1920px-Goniurosaurus_yamashinae_femelle.jpg>
 
@@ -57,7 +57,7 @@ The Convention on International Trade in Endangered Species of Wild Fauna and Fl
 | Researchers                          	| Alice Hughes (Ecologist at the Chinese Academy of Sciences)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             	|
 |--------------------------------------	|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------	|
 | Published in ? When ? (If mentioned) 	| /                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       	|
-| General Topic                        	| The impact and problems of the reptile trade on biodiversity                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            	|
+| General Topic                        	| - The impact and problems of the reptile trade on biodiversity                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            	|
 | Procedure/What was examinated        	| - There are approximately 4,000 species of reptiles regularly traded online, half of which are caught in the wild and are not subject to any international regulation. Today, "anything can be traded until you say otherwise". + Researchers have compiled CITES data and data from 152 other sites. They identified 36% (4000 species) of known reptile species, most of which are legal, but 79% of reptile species sold online are not regulated by CITES and therefore leave no trace of any trade. + Unfortunately, the sale status of a species is not linked to its conservation status and more than a third of the reptiles on the list, 500 of which are endangered, have not been assessed for their conservation status. + The nomination process to enter CITES takes more than 10 years. The threat of a species does not justify its inclusion and the cost of CITES regulations is high because the entry procedure takes more than 10 years so a limited number of species can enter. 	|
 | Conclusions/Discovery                	| - The lack of regulation means that scientists have no way of knowing whether the trade is having an impact on the survival of these species. + The research is not broad enough and does not give the number of individuals but the number of species, which makes it difficult to visualise the scale of the situation. + CITES favours commercial interests over scientific ones but acknowledges that it has gaps in its data on reptiles. + Each country should introduce legislation banning the import of certain wild-caught animals as some countries have done in the past. + The pet industry should turn to captive breeding operations to preserve wildlife.                                                                                                                                                                                                                                                                                                                               	|
 | Remaining questions                  	| - Why is it so difficult to implement a breeding or conservation plan for endangered species when they are sometimes traded? - Are countries really that passive about these trades or do they have ideas in their minds but keep it secrets for now ?                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  	|
